
syntax = "proto3";
package com.hugoserve.demo.proto;

option java_package = "com.hugoserve.demo.proto";
option java_multiple_files = true;

import "google/protobuf/any.proto";

message ApiResponse {
  bool success = 1;
  string status_code = 2;
  string message = 3;
  google.protobuf.Any data = 4;
}
